--- a/pages/postres/index.html
+++ b/pages/postres/index.html
@@ -66,7 +66,7 @@
             </div>
         </div> <!-- este div cierra el menú-->
         <div class="row"> <!-- Este div da inicio al cuerpo -->
-            <div class="col-9">
+            <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-xs-12">
                 <!-- Sección de novedades-->
                 <section>
                     <article>
@@ -107,7 +107,7 @@
                     </article>
                 </section>
             </div>
-            <div class="col-3">
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-xs-12">
                 <aside>
                     <div class="container-fluid"> <!-- Sección Patrocinadores-->
                         <p>
